Fix footer links on small screen

--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,7 +5,7 @@ footer {
     margin-top: 6rem;
 
     p,
-    .ft-content a {
+    .ft-links a {
         color: var.$color-secondary-txt;
     }
 
@@ -148,6 +148,10 @@ footer {
 }
 
 @media screen and (max-width: var.$media-medium) {
+    .ft-main-block {
+        margin: 0 1rem;
+    }
+
     .ft-logo {
         justify-content: center;
     }
@@ -160,19 +164,25 @@ footer {
         max-width: 100%;
         align-items: center;
         text-align: center;
-        margin-bottom: 1.5rem;
+        margin-bottom: 2rem;
 
         iframe {
             margin-left: 5rem;
         }
+    }
+
+    .ft-block-links {
+        text-align: center;
     }
 }
 
 @media screen and (max-width: var.$media-medium-small) {
     .ft-block-links {
         width: 50%;
-        text-align: center;
-        margin-bottom: 1rem;
+
+        &:is(:nth-of-type(2), :nth-of-type(3)) {
+            margin-bottom: 1rem;
+        }
     }
 
     .ft-legal ul {
@@ -191,6 +201,11 @@ footer {
 
 @media screen and (max-width: var.$media-small) {
     footer h3 {
-        font-size: 1.1rem;
+        font-size: 1rem;
     }
+
+    .ft-links a {
+        font-size: 0.95rem;
+    }
+
 }
